# financial-research-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx
frontend/src/components/market/: StockCard.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/store/: chat.ts
frontend/src/types/: index.ts
scripts/: setup.sh
src/agents/: __init__.py  analyst.py  base.py  collector.py  rag.py  reporter.py  router.py
src/api/: app.py  dependencies.py
src/api/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py
src/api/routes/: __init__.py  documents.py  health.py  market.py  research.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/config/: logging.py  settings.py
src/core/: __init__.py  exceptions.py  types.py
src/infrastructure/: __init__.py  cache.py  database.py  vector_store.py
src/rag/: __init__.py  chunker.py  embeddings.py  processor.py  retriever.py
src/tools/: __init__.py  base.py  cvm.py  news.py  yahoo_finance.py
src/workflows/: __init__.py  graph.py  nodes.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_rag.py  test_tools.py
